# neonstore

./: .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  DCO.txt  Dockerfile  Doxyfile  EXITCODES.md  GOVERNANCE.md  INCLUSION.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  PRIVACY.md  README.md  RELEASE.md  REUSE.toml  ROADMAP.md  SECURITY.md  STYLE.md  SUPPLY_CHAIN.md  SUPPORT.md  SUSTAINABILITY.md  THREAT_MODEL.md  WHITEPAPER.md  conanfile.py  flake.nix  neonstore.conf.sample  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: abi.yml  ci.yml  cifuzz.yml  codeql.yml  codespell.yml  containers.yml  cppcheck.yml  dco.yml  devskim.yml  docs.yml  links.yml  lint-extra.yml  manpage.yml  ort.yml  pr-title.yml  release-build.yml  release.yml  reuse.yml  sbom.yml  scorecard.yml  semgrep.yml  slsa-provenance.yml  trivy.yml
bench/: CMakeLists.txt  bench_inventory.cpp
benchmarks/: bench_inventory.cpp
bindings/python/: CMakeLists.txt  neonstore_py.cpp
cmake/: NeonStoreSystemConfig.cmake.in  NeonStoreSystemConfigVersion.cmake.in  cmake_uninstall.cmake.in
cmake/toolchains/: linux-aarch64.cmake  windows-mingw64.cmake
completions/: neonstore.bash  neonstore.fish  neonstore.zsh
docs/: ABI_COMPLIANCE_CI.md  ABI_STABILITY.md  ACCESSIBILITY.md  API_C.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT.md  AUDIT_CHECKLIST.md  BACKPORTING.md  BACKUPS.md  BENCHMARK.md  BRAND_GUIDE.md  BRAND_KIT.md  CANONICALIZE.md  CHANGE_CONTROL.md  CLI.md  COMPATIBILITY.md  COMPLETIONS.md  CONFIG.md  CONTRIBUTOR_LADDER.md  COVERAGE.md  CPACK.md  DATASET_HASH.md  DATA_INTEGRITY.md  DEDUPE.md  DEPLOYMENT.md  DIFF.md  DIVERSITY_INCLUSION.md  DOCTOR_CHECKUP.md  DOCTOR_FIX.md  ETHICS.md  EXITCODES.md  EXPORT_JSONL.md  FUZZ.md  GENERATE_DATA.md  HARDENING.md  HEALTH.md  I18N.md  IMPORT_EXPORT.md  INCIDENT_RESPONSE.md  (+56 more)
docs/adr/: 0002-thread-safety.md
docs/schema/: product.schema.json  product_list.schema.json
examples/: c_api_example.c  embedding.cpp  python_example.py
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
fuzz/: CMakeLists.txt  csv.dict  fuzz_csv_dir.cpp  fuzz_csv_orders.cpp  fuzz_csv_products.cpp
include/neonstore/: audit.hpp  c_api.h  capi.h  config.hpp  crc32.hpp  csv_storage.hpp  export.hpp  inventory.hpp  json.hpp  log.hpp  order.hpp  pch.hpp  product.hpp  sha256.hpp  sqlite_storage.hpp  storage.hpp  version.hpp  version.hpp.in
man/: neonstore-config.5  neonstore.1
packaging/: CPackConfig.cmake  neonstore.map  neonstore.pc.in
packaging/chocolatey/: neonstore.nuspec  neonstoresystem.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/debian/: changelog  control
packaging/flatpak/: io.neonstore.NeonStore.json  org.neonstore.CLI.json
packaging/homebrew/: neonstore.rb
packaging/homebrew/Formula/: neonstore.rb  neonstoresystem.rb
packaging/rpm/: neonstore.spec  neonstoresystem.spec
packaging/scoop/: neonstore.json
packaging/snap/: snapcraft.yaml
packaging/systemd/: neonstore-backup.service  neonstore-backup.timer
packaging/windows/: README.md  neonstore_backup.xml
packaging/winget/: NeonStoreSystem.NeonStoreSystem.yaml  neonstore.yaml
sbom/: bom.cdx.json  generate-sbom.sh
src/: CMakeLists.txt  c_api.cpp  capi.cpp  config.cpp  csv_storage.cpp  inventory.cpp  main.cpp  product.cpp  storage_csv.cpp  storage_sqlite.cpp
tests/: CMakeLists.txt  test_cli_unix.sh  test_csv_crlf.cpp  test_csv_edge.cpp  test_fingerprint.cpp  test_generative.cpp  test_integrity.cpp  test_inventory.cpp  test_inventory_ops.cpp  test_sqlite.cpp  test_storage.cpp  test_threads.cpp
tools/: checksums.sh  coverage_gate.py  e2e.sh  license_check.py  perf_gate.py  pre-commit.sh  release_checksums.sh  size_gate.py
tools/completion/: neonstore.bash  neonstore.fish  neonstore.ps1  neonstore.zsh
tools/completions/: neonstore.bash  neonstore.fish  neonstore.zsh
tools/format/: .clang-format
